create table audit_revision (rev bigint generated by default as identity, rev_timestamp bigint not null, user_name varchar(255) not null, primary key (rev));
create table lookup_value (lookup_value_id bigint generated by default as identity, active boolean not null, effective_from date, effective_to date, display_value varchar(255) not null, lookup_list_name varchar(100) not null, version bigint, parent bigint, primary key (lookup_value_id));
create table lookup_value_aud (lookup_value_id bigint not null, rev bigint not null, revtype smallint, active boolean, effective_from date, effective_to date, display_value varchar(255), lookup_list_name varchar(255), parent bigint, primary key (lookup_value_id, rev));
create unique index UC_LOOKUP_LIST_VALUE on lookup_value (lookup_list_name, display_value, parent);
alter table lookup_value add constraint FK_LOOKUP_VALUE_PARENT foreign key (parent) references lookup_value;
alter table lookup_value_aud add constraint FKs63k0vcs9g71twnfq8l6x44a4 foreign key (rev) references audit_revision;
